--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,7 @@
 [.ShellClassInfo]
 InfoTip=This folder is shared online.
-IconFile=C:\Program Files\Google\Drive\googledrivesync.exe
-IconIndex=16
-    
+IconResource=C:\Windows\System32\SHELL32.dll,158
+[ViewState]
+Mode=
+Vid=
+FolderType=Documents
